conference/NetdevConf2025: Add section on upstreaming to the paper
Signed-off-by: Toke Høiland-Jørgensen <toke@redhat.com>

--- a/conference/NetDevConf2025-0x19/mq-cake-paper/isea.tex
+++ b/conference/NetDevConf2025-0x19/mq-cake-paper/isea.tex
@@ -32,6 +32,7 @@ rate limiting, qdisc, cake
 \input{introduction.tex}
 \input{implementation.tex}
 \input{evaluation.tex}
+\input{upstreaming.tex}
 \input{conclusion.tex}
 \input{ack.tex}
 
