--- a/conference/NetDevConf2025-0x19/mq-cake-paper/introduction.tex
+++ b/conference/NetDevConf2025-0x19/mq-cake-paper/introduction.tex
@@ -9,8 +9,9 @@ To address these challenges, prior work has focused on overcoming lock contentio
 
 However, the EDT model decides a packet's fate before enqueuing it in FQ, which makes it impossible to effectively apply AQM algorithms such as CoDel~\cite{codel}.
 In order to maintain low latencies, the EDT model relies on a backpressure mechanism to prevent excessive packet queueing in the network stack~\cite{carousel}. The absence of proper backpressure can lead to performance issues, as observed in the Cilium bandwidth manager, where it caused spikes in network latency~\cite{edt-issue, fifo-in-the-cloud}. While backpressure can be enforced on end-hosts --- the primary target of the EDT-BPF approach --- it represents only a subset of rate-limiting applications.
-In scenarios where direct control over end-hosts is unavailable, such as rate limiting on routers or switches, backpressure mechanisms are not feasible. This limitation is particularly relevant for enforcing data plans in ISPs or managing traffic on home routers.
+In scenarios where direct control over end-hosts is unavailable, such as rate limiting on routers or switches, backpressure mechanisms are not feasible. This limitation is particularly relevant for enforcing data plans at ISPs or managing traffic on home routers.
 Furthermore, using EDT-BPF to enforce a global rate limit on an interface will create a single virtual FIFO across all FQ instances, effectively eliminating any flow queueing behavior.
 
 We introduce a scalable rate-limiting approach for forwarding devices by implementing a lock-free synchronization mechanism between per-queue sch\_cake instances. The proposed method scales efficiently with increasing CPU core counts while maintaining a deviation of less than 0.25\% from the configured target rate.
 Our design achieves global rate limits up to 3x higher than single-queue CAKE and HTB, while reducing tail latencies between 10x--2500x as compared to EDT-BPF.
+The source code is published on Github: \url{https://github.com/mq-cake/linux-mq-cake}.
