--- a/areas/bench/bench01_lpm-trie.org
+++ b/areas/bench/bench01_lpm-trie.org
@@ -5,6 +5,15 @@
 
 Matt Fleming is developing a new selftests bench for the LPM-trie BPF-map.
 
+* Table of Contents (auto-generated)                                    :toc:
+- [[#code-references][Code references]]
+  - [[#git-tree][Git tree]]
+  - [[#upstream-patches][Upstream patches]]
+- [[#micro-benchmark][Micro benchmark]]
+- [[#results-10000-entries][Results: 10,000 entries]]
+  - [[#cpu-amd-epyc-9684x][CPU: AMD EPYC 9684X]]
+  - [[#cpu-intel-e5-1650-v4--360ghz][CPU: Intel E5-1650 v4 @ 3.60GHz]]
+
 * Code references
 
 ** Git tree
@@ -19,3 +28,129 @@ Patch version: "selftests/bpf: Add LPM trie microbenchmarks"
  - [[https://lore.kernel.org/all/20250721142753.263135-1-matt@readmodwrite.com/][V2]]
  - [[https://lore.kernel.org/all/20250722150152.1158205-1-matt@readmodwrite.com/][V3]]
 
+
+* Micro benchmark
+
+Benchmarks operate on tries without gaps in the key range, i.e. each test
+begins with a trie with valid keys in the range =[0, nr_entries)=. This is
+intended to cause maximum branching when traversing the trie.
+
+* Results: 10,000 entries
+
+The default bench run uses 10,000 entries in the map.
+
+#+begin_src bash
+for operation in lookup update delete free ; do
+   sudo ./bench lpm-trie-${operation} \
+      --nr_entries=10000 --prefix_len=32 --producers=1 | \
+      tee ~/bpf-benchs/results01-10k-${operation} ;
+done
+#+end_src
+
+** CPU: AMD EPYC 9684X
+
+| operation | throughput            | latency per operation |
+|-----------+-----------------------+-----------------------|
+| lookup    | 7.598 ± 0.004 M ops/s | 131.608 ns/op         |
+| update    | 3.247 ± 0.029 M ops/s | 308.008 ns/op         |
+| delete    | 1.747 ± 0.053 M ops/s | 572.519 ns/op         |
+| free      | 0.294 ± 0.055 K ops/s | 3.521 ms/op           |
+
+Raw data:
+#+begin_example
+Setting up benchmark 'lpm-trie-lookup'...
+Benchmark 'lpm-trie-lookup' started.
+Iter   0 ( 53.928us): hits    7.490M/s (  7.490M/prod)
+Iter   1 ( -3.686us): hits    7.600M/s (  7.600M/prod)
+Iter   2 ( -2.775us): hits    7.600M/s (  7.600M/prod)
+Iter   3 (  1.582us): hits    7.600M/s (  7.600M/prod)
+Iter   4 (  1.611us): hits    7.590M/s (  7.590M/prod)
+Iter   5 ( 30.125us): hits    7.600M/s (  7.600M/prod)
+Iter   6 (-29.866us): hits    7.600M/s (  7.600M/prod)
+Summary: throughput    7.598 ± 0.004 M ops/s (  7.598M ops/prod), latency  131.608 ns/op
+Setting up benchmark 'lpm-trie-update'...
+Benchmark 'lpm-trie-update' started.
+Iter   0 ( 45.819us): hits    3.270M/s (  3.270M/prod)
+Iter   1 ( -4.308us): hits    3.200M/s (  3.200M/prod)
+Iter   2 (  3.224us): hits    3.280M/s (  3.280M/prod)
+Iter   3 ( -1.944us): hits    3.240M/s (  3.240M/prod)
+Iter   4 ( 40.479us): hits    3.270M/s (  3.270M/prod)
+Iter   5 (-22.415us): hits    3.260M/s (  3.260M/prod)
+Iter   6 (-12.540us): hits    3.230M/s (  3.230M/prod)
+Summary: throughput    3.247 ± 0.029 M ops/s (  3.247M ops/prod), latency  308.008 ns/op
+Setting up benchmark 'lpm-trie-delete'...
+Benchmark 'lpm-trie-delete' started.
+Iter   0 ( 80.999us): hits    1.690M/s (  1.690M/prod)
+Iter   1 (-23.827us): hits    1.820M/s (  1.820M/prod)
+Iter   2 ( -5.139us): hits    1.720M/s (  1.720M/prod)
+Iter   3 (  5.156us): hits    1.740M/s (  1.740M/prod)
+Iter   4 ( 17.284us): hits    1.790M/s (  1.790M/prod)
+Iter   5 (-18.450us): hits    1.740M/s (  1.740M/prod)
+Iter   6 ( 27.009us): hits    1.670M/s (  1.670M/prod)
+Summary: throughput    1.747 ± 0.053 M ops/s (  1.747M ops/prod), latency  572.519 ns/op
+Setting up benchmark 'lpm-trie-free'...
+Benchmark 'lpm-trie-free' started.
+Iter   0 ( 67.620us): hits    0.176K/s (  0.176K/prod)
+Iter   1 ( 50.173us): hits    0.253K/s (  0.253K/prod)
+Iter   2 (-60.874us): hits    0.299K/s (  0.299K/prod)
+Iter   3 (  5.877us): hits    0.351K/s (  0.351K/prod)
+Iter   4 ( 29.121us): hits    0.300K/s (  0.300K/prod)
+Iter   5 (-13.012us): hits    0.349K/s (  0.349K/prod)
+Iter   6 (-14.434us): hits    0.209K/s (  0.209K/prod)
+Summary: throughput    0.294 ± 0.055 K ops/s (  0.294K ops/prod), latency    3.521 ms/op
+#+end_example
+
+** CPU: Intel E5-1650 v4 @ 3.60GHz
+
+| operation | throughput            | latency per operation |
+|-----------+-----------------------+-----------------------|
+| lookup    | 6.407 ± 0.005 M ops/s | 156.087 ns/op         |
+| update    | 3.973 ± 0.149 M ops/s | 251.678 ns/op         |
+| delete    | 2.612 ± 0.048 M ops/s | 382.897 ns/op         |
+| free      | 0.425 ± 0.004 K ops/s | 2.352 ms/op           |
+
+Raw data:
+#+begin_example
+for operation in lookup update delete free ; do    sudo ./bench lpm-trie-${operation} \
+ --nr_entries=10000 --prefix_len=32 --producers=1  | tee ~/bpf-benchs/results01c-10k-${operation} ; done
+Setting up benchmark 'lpm-trie-lookup'...
+Benchmark 'lpm-trie-lookup' started.
+Iter   0 ( 74.362us): hits    6.220M/s (  6.220M/prod)
+Iter   1 (-11.178us): hits    6.410M/s (  6.410M/prod)
+Iter   2 ( 16.717us): hits    6.400M/s (  6.400M/prod)
+Iter   3 (-13.082us): hits    6.400M/s (  6.400M/prod)
+Iter   4 ( -3.117us): hits    6.410M/s (  6.410M/prod)
+Iter   5 (-31.884us): hits    6.410M/s (  6.410M/prod)
+Iter   6 ( 32.686us): hits    6.410M/s (  6.410M/prod)
+Summary: throughput    6.407 ± 0.005 M ops/s (  6.407M ops/prod), latency  156.087 ns/op
+Setting up benchmark 'lpm-trie-update'...
+Benchmark 'lpm-trie-update' started.
+Iter   0 ( 70.527us): hits    4.030M/s (  4.030M/prod)
+Iter   1 (-36.184us): hits    4.130M/s (  4.130M/prod)
+Iter   2 ( -4.904us): hits    4.110M/s (  4.110M/prod)
+Iter   3 ( 39.103us): hits    3.960M/s (  3.960M/prod)
+Iter   4 ( -0.624us): hits    4.040M/s (  4.040M/prod)
+Iter   5 ( -2.408us): hits    3.840M/s (  3.840M/prod)
+Iter   6 (-27.573us): hits    3.760M/s (  3.760M/prod)
+Summary: throughput    3.973 ± 0.149 M ops/s (  3.973M ops/prod), latency  251.678 ns/op
+Setting up benchmark 'lpm-trie-delete'...
+Benchmark 'lpm-trie-delete' started.
+Iter   0 ( 66.196us): hits    2.780M/s (  2.780M/prod)
+Iter   1 (-31.104us): hits    2.690M/s (  2.690M/prod)
+Iter   2 ( 30.382us): hits    2.640M/s (  2.640M/prod)
+Iter   3 (  0.586us): hits    2.620M/s (  2.620M/prod)
+Iter   4 ( -3.747us): hits    2.580M/s (  2.580M/prod)
+Iter   5 (  0.796us): hits    2.570M/s (  2.570M/prod)
+Iter   6 ( -1.491us): hits    2.570M/s (  2.570M/prod)
+Summary: throughput    2.612 ± 0.048 M ops/s (  2.612M ops/prod), latency  382.897 ns/op
+Setting up benchmark 'lpm-trie-free'...
+Benchmark 'lpm-trie-free' started.
+Iter   0 ( 27.219us): hits    0.197K/s (  0.197K/prod)
+Iter   1 ( 20.550us): hits    0.417K/s (  0.417K/prod)
+Iter   2 (-16.685us): hits    0.424K/s (  0.424K/prod)
+Iter   3 (  5.596us): hits    0.427K/s (  0.427K/prod)
+Iter   4 ( -0.620us): hits    0.428K/s (  0.428K/prod)
+Iter   5 ( -6.417us): hits    0.427K/s (  0.427K/prod)
+Iter   6 ( -0.434us): hits    0.427K/s (  0.427K/prod)
+Summary: throughput    0.425 ± 0.004 K ops/s (  0.425K ops/prod), latency    2.352 ms/op
+#+end_example
